Fix scrollbars that were appearing

--- a/wall/public/wall-maker/css/wall-maker.css
+++ b/wall/public/wall-maker/css/wall-maker.css
@@ -129,7 +129,7 @@ header .heading:after {
   background-position: top right;
 }
 header {
-  overflow: auto;
+  overflow: hidden;
 }
 @media (max-width: 400px) {
   header h1 {
